# ll

./: Cargo.toml  Makefile.toml  NOTES
src/: lib.rs  main.rs  messenger.rs
src/game/: base_game.rs  card_action.rs  card_rules.rs  mod.rs  original.rs
src/state/: card.rs  deck.rs  mod.rs  player.rs  table.rs  testcard.rs
