[package]
name = "ll"
version = "0.1.0"
authors = ["George Madrid <gmadrid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "loveletter"

[dependencies]
memorable = { path = "../memorable" }
rand = "0.7.3"
thiserror = "1.0.20"
fehler = "1.0.0"
objekt-clonable = "0.2.2"
